# macaron

./: .cursorignore  .gitignore  .gitmodules  README.md  cookiecutter.json  pyproject.toml
.github/: copilot-instructions.md
data/dumps/: cookiecutter docs site dump 2024-11-11 00-06-22.json  cookiecutter.json  docusarus repo website docs dump.md  fastapi-docs.md  framer-motion docs site dump 2024-11-10 14-40-25.json  shacdcn-ui docs site dump 2024-11-10 14-36-48.json  typer-docs.md
data/dumps/{{cookiecutter.project_slug}}/: Dockerfile  README.md  local_extensions.py  setup.py
docs/: README.md  components.json  docusaurus.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
docs/docs/: index.mdx  index.module.scss  setup.mdx  usage.mdx
docs/docs/tools/: Makefile.mdx  autoflake.mdx  autopep8.mdx  black.mdx  config.py.mdx  cookiecutter.mdx  docusaurus.mdx  fastapi.mdx  fontawesome.mdx  framer-motion.mdx  github-actions.mdx  hypothesis.mdx  index.mdx  ipykernel.mdx  ipywidgets.mdx  isort.mdx  jupyter-contrib-nbextensions.mdx  jupyterlab-git.mdx  jupyterlab-github.mdx  jupyterlab.mdx  logging.py.mdx  loguru.mdx  lucide-react.mdx  matplotlib.mdx  mypy.mdx  nbconvert.mdx  nbdime.mdx  nest-asyncio.mdx  pandas.mdx  plotly-dash.mdx  plotly.mdx  poetry.mdx  pydantic.mdx  pyenv.mdx  pylint.mdx  pytest-benchmark.mdx  pytest-html.mdx  pytest-mock.mdx  pytest-sugar.mdx  pytest.mdx  (+9 more)
docs/plugins/: webpack-plugin.js  webpack.js
docs/plugins/webpack/: index.ts  package.json
docs/plugins/webpack-plugin/: package.json
docs/src/components/: DocsFeatures.tsx  ToolCard.tsx  ToolLinks.module.scss  ToolLinks.tsx  ToolList.tsx  ToolTags.tsx
docs/src/components/AnimatedBackground/: index.module.scss  index.tsx
docs/src/components/HomepageFeatures/: index.module.scss  index.tsx
docs/src/components/HomepageHeader/: index.module.scss  index.tsx
docs/src/components/ToolsData/: index.tsx
docs/src/components/ui/: badge.tsx  button.tsx  card.tsx  hover-card.tsx  input.tsx  select.tsx  separator.tsx  tooltip.tsx
docs/src/constants/: linkData.ts  toolsData.ts
docs/src/css/: custom.scss  globals.css
docs/src/pages/: index.mdx  index.module.scss  index.tsx
docs/src/plugins/webpack/: index.ts
docs/static/: python cookiecutter docs site dump firecrawl results.json
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
scripts/: README.md  setup_env.sh
{{cookiecutter.project_slug}}/: .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: format-lint-test.yml
{{cookiecutter.project_slug}}/docs/: docusaurus.config.ts  package-lock.json  package.json
{{cookiecutter.project_slug}}/docs/src/components/ui/: badge.tsx  button.tsx  card.tsx  hover-card.tsx  input.tsx  select.tsx  separator.tsx  tooltip.tsx
{{cookiecutter.project_slug}}/tests/: test_config.py  test_logging.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  config.py  logging.py
