[tool.poetry]
name = "macaron"
version = "0.1.0"
description = "a cookiecutter bundle of the best Python project resources"
authors = ["Wyatt Walsh <wyattowalsh@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
rich = "^13.9.4"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
